# renderer-rs

./: Cargo.toml  README.md
src/: lib.rs  renderer.rs  transform.rs
src/model/: mesh.rs  mod.rs
src/rasterising/: mod.rs
src/ray_tracing/: mod.rs
