[package]
name = "renderer"
version = "0.1.0"
authors = ["Luke Miles <luke.49@live.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sized_matrix = "^0.2.4"
higher_order_functions = "^0.1.2"
image = "^0.23.14"
num-traits = "^0.2.14"
